# Recommind

./: .gitattributes  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  testing_pred.py
data/raw/: book_rating.csv
models/encoding_models/: authors_encoder.joblib  gender_encoder.joblib
models/ncf_model/: best_model.pth  recommind_best_model.pth  recommind_model.pth
notebooks/: Recommind - Copia.ipynb  Recommind Prediction.ipynb  Recommind SQL Training.ipynb  Recommind SQL copy.ipynb  Recommind SQL.ipynb  Recommind.ipynb
notebooks/SQL Implement Version (duckdb)/: Recommind SQL.ipynb  recommind-sql-training(1).ipynb  recommind-sql-training.ipynb
scripts/: api_test.py  api_validation_test.py  duck_db.py  testing_pred.py  training.py
src/: __init__.py  evaluator_metrics.py  trainer.py
src/data/: processing.py  treatment.py
src/models/: model.py
src/recommind_model/: __init__.py  model.py
src/recommind_packages/: __init__.py  trainer.py
src/recommind_packages/data/: processing.py  treatment.py
src/recommind_packages/models/: model.py
src/recommind_pred/: __init__.py  processing.py  user_recommendation.py
src/recommind_train/: __init__.py  evaluator_metrics.py  trainer.py
src/recommind_train/data/: processing.py
