[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "recommind_packages"
description = "local package"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn",
    "polars",
    "numpy",
    "pandas",
    "pyarrow",
    "joblib",
    "dotenv",
    "torch",
    "setuptools",
    "setuptools-scm",
    "duckdb"
]